require java 8 as a minimum